<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_units_section">
        <ListPreference
            android:title="@string/pick_distance_unit"
            android:key="distance_unit"
            android:entries="@array/distance_units"
            android:entryValues="@array/distance_units"/>

        <ListPreference
            android:title="@string/choose_currency"
            android:key="currency"
            android:entries="@array/currency"
            android:entryValues="@array/currency"/>

        <ListPreference
            android:title="@string/volume_unit"
            android:key="volume_unit"
            android:entries="@array/volume_units"
            android:entryValues="@array/volume_units">

        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>