<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/symbol_padding"
    android:paddingStart="@dimen/symbol_padding"
    android:paddingRight="0dp"
    android:paddingEnd="0dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_date_range_black_24dp"
        android:contentDescription="@string/change_date_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding"
        android:layout_row="0"
        android:layout_column="0" />

    <Button
        android:id="@+id/change_date_button"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/symbol_padding"
        android:text="@string/change_date_button" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_attach_money_black_24dp"
        android:contentDescription="@string/total_cost_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding" />

    <EditText
        android:id="@+id/total_cost_edit_text"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/symbol_padding"
        android:hint="@string/total_cost_hint"
        android:inputType="numberDecimal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_local_gas_station_black_24dp"
        android:contentDescription="@string/total_cost_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding" />

    <EditText
        android:id="@+id/litre_edit_text"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/symbol_padding"
        android:hint="@string/litre_hint"
        android:inputType="numberDecimal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_distance"
        android:contentDescription="@string/odometer_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding" />

    <EditText
        android:id="@+id/odometer_edit_text"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/symbol_padding"
        android:hint="@string/odometer_hint"
        android:inputType="numberDecimal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_description_black_24dp"
        android:contentDescription="@string/fuel_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_gravity="fill"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_columnSpan="3"
        android:layout_rowSpan="10"
        android:hint="@string/fuel_description_hint" />

    <CheckBox
        android:id="@+id/partial_fillup_check_box"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/symbol_padding"
        android:text="@string/partial_fillup_hint" />
</GridLayout>