<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/list_view_item_padding_horizontal"
        android:paddingStart="@dimen/list_view_item_padding_horizontal"
        android:paddingRight="@dimen/list_view_item_padding_horizontal"
        android:paddingEnd="@dimen/list_view_item_padding_horizontal"
        android:paddingTop="@dimen/list_view_item_padding_vertical"
        android:paddingBottom="@dimen/list_view_item_padding_vertical">

        <ImageView
        android:id="@+id/car_image_view"
        android:layout_width="@dimen/car_image_size"
        android:layout_height="@dimen/car_image_size"
        android:contentDescription="@string/car_image_description"
        android:layout_marginEnd="@dimen/car_image_view_end_margin"
        android:layout_marginRight="@dimen/car_image_view_end_margin" />

        <TextView
            android:id="@+id/car_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/car_image_view"
            android:layout_toRightOf="@id/car_image_view"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/car_name"/>

        <Button
            android:id="@+id/add_fuel_record_button"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="@dimen/action_button_size"
            android:background="@drawable/ic_add_record"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="false"
            android:contentDescription="@string/add_fuel_record_button_description" />
    </RelativeLayout>
</android.support.v7.widget.CardView>