<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/symbol_padding"
    android:paddingStart="@dimen/symbol_padding"
    android:paddingRight="0dp"
    android:paddingEnd="0dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_directions_car_black_24dp"
        android:contentDescription="@string/car_name_image_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding" />

    <EditText
        android:id="@+id/car_name_edit_text"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/symbol_padding"
        android:inputType="text"
        android:hint="@string/car_name_hint" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_alt_black_24dp"
        android:contentDescription="@string/car_name_image_description"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/symbol_padding"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/symbol_padding" />

    <ImageView
        android:id="@+id/car_image_view"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/image_car"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:contentDescription="@string/car_name_image_description" />

    <Button
        android:id="@+id/change_car_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/symbol_padding"
        android:layout_marginStart="@dimen/symbol_padding"
        android:text="@string/car_change_image" />
</GridLayout>